[package]
name = "node-ranking"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.7", features = ["tokio", "tracing", "query", "macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-gossip = { version = "3.*", features = ["agave-unstable-api"] }
solana-keypair = "*"
solana-logger = "3.0.0"
solana-native-token = "3.0.0"
solana-net-utils = { version = "3.*", features = ["dev-context-only-utils", "agave-unstable-api"] }
solana-pubkey = "4.0.0"
solana-streamer = { version = "3.*", features = ["agave-unstable-api"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
